# yt-spout-syphon-bridge

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.cargo/: config.toml
.claude/: settings.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/bindings/spout2/: README.md
src-tauri/bindings/syphon/: README.md
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/output/: mod.rs  ndi.rs  preview.rs  preview_metal.rs  preview_sw.rs  spout.rs  syphon.rs
src-tauri/src/player/: audio.rs  mod.rs  mpv_context.rs
src/components/: AudioDeviceSelector.tsx  PlayerControls.tsx  PreviewCanvas.tsx  TransportControls.tsx  UrlInput.tsx
src/hooks/: usePlayer.ts
