[package]
name = "yt-spout-syphon-bridge"
version = "0.1.0"
description = "YouTube → Spout/Syphon streaming bridge"
authors = ["nakatani.runhun@gmail.com"]
edition = "2021"
rust-version = "1.77"
default-run = "yt-spout-syphon-bridge"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# Windows: Spout2 SDK のFFIバインディングを自動生成
[target.'cfg(windows)'.build-dependencies]
bindgen = "0.71"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"

# libmpv: YouTube動画デコード + OpenGL render API
# NOTE: システムに libmpv をインストール必要あり
# macOS: brew install mpv
# Windows: https://sourceforge.net/projects/mpv-player-windows/files/libmpv/
libmpv2 = { version = "4", features = ["render"] }
libmpv2-sys = "4"

# OpenGLコンテキスト + ネイティブウィンドウ (プレビュー用)
glutin = "0.32"
glutin-winit = "0.5"
winit = "0.30"
gl = "0.14"
raw-window-handle = "0.6"

# クロスプラットフォーム同期
once_cell = "1"

# macOS: Syphon ObjC FFI
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray"] }
objc2-metal = { version = "0.3", features = ["alloc"] }
core-foundation = "0.10"
core-graphics = "0.24"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
